--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 #p1 > div {
-  width: 30%;
+  width: 28%;
   margin: 10px;
   height: 200px;
 }
@@ -22,7 +22,7 @@ h5 {
 }
 .img_blog {
   width: 100%;
-  height: 75%;
+  height: 80%;
 }
 .img_blog img {
   width: 100%;
@@ -30,7 +30,7 @@ h5 {
 }
 
 .p_block {
-  height: 25%;
+  height: 20%;
   width: 100%;
 }
 .p_block > span {
@@ -51,6 +51,7 @@ h5 {
   line-height: 50px;
 }
 .service {
+  margin-top: 40px;
   text-align: center;
 }
 span {
@@ -105,7 +106,6 @@ span {
     justify-content: center;
   }
   .p_block > span {
-    line-height: 0px;
     color: black;
   }
 }
